# meetingscribe

./: .gitignore  README.md
docs/superpowers/plans/: 2026-03-20-meetingscribe.md
docs/superpowers/specs/: 2026-03-20-meetingscribe-design.md
python/: pyproject.toml
python/resources/: com.meetingscribe.daemon.plist  default_config.toml  default_prompt.md
python/src/meetingscribe/: __init__.py  aligner.py  audio_merger.py  cli.py  config.py  diarizer.py  disk_manager.py  manifest.py  markdown_writer.py  notify.py  pipeline.py  retry.py  speakers.py  summarizer.py  transcriber.py  watcher.py
python/tests/: conftest.py  test_aligner.py  test_audio_merger.py  test_cli.py  test_config.py  test_diarizer.py  test_disk_manager.py  test_integration.py  test_manifest.py  test_markdown_writer.py  test_pipeline.py  test_resummarize.py  test_retry.py  test_speakers.py  test_summarizer.py  test_transcriber.py  test_watcher.py
swift/MeetingScribe/: .gitignore  Package.resolved  Package.swift  README.md
swift/MeetingScribe/Sources/MeetingScribe/: App.swift  AudioCapture.swift  ChunkWriter.swift  Config.swift  Constants.swift  CrashRecovery.swift  DetectionManager.swift  Info.plist  Logger.swift  ManifestWriter.swift  MeetDetector.swift  MenuBarView.swift  PermissionManager.swift  SlackDetector.swift  SystemEvents.swift  ZoomDetector.swift
swift/MeetingScribe/Tests/MeetingScribeTests/: MeetingScribeTests.swift
swift/MeetingScribe/scripts/: build-app.sh
